--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "dcorroyer/my-open-api-bundle": "dev-main",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "nelmio/api-doc-bundle": "^4.12",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
+        "symfony/asset": "~6.3.0",
         "symfony/console": "~6.3.0",
         "symfony/dotenv": "~6.3.0",
         "symfony/flex": "^2",
@@ -20,8 +23,11 @@
         "symfony/property-info": "~6.3.0",
         "symfony/runtime": "~6.3.0",
         "symfony/serializer": "~6.3.0",
+        "symfony/twig-bundle": "~6.3.0",
         "symfony/validator": "~6.3.0",
-        "symfony/yaml": "~6.3.0"
+        "symfony/yaml": "~6.3.0",
+        "twig/extra-bundle": "^2.12 || ^3.0",
+        "twig/twig": "^2.12 || ^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
@@ -55,7 +61,7 @@
     "conflict": {
         "symfony/symfony": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
