--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dcorroyer/mybudget",
-    "description": "A simple Symfony project to manage your mensual budget.",
+    "description": "A simple Symfony API project to manage your mensual budget.",
     "license": "proprietary",
     "type": "project",
     "require": {
@@ -13,20 +13,15 @@
         "symfony/console": "~6.3.0",
         "symfony/dotenv": "~6.3.0",
         "symfony/flex": "^2",
-        "symfony/form": "~6.3.0",
         "symfony/framework-bundle": "~6.3.0",
         "symfony/runtime": "~6.3.0",
-        "symfony/security-bundle": "~6.3.0",
-        "symfony/twig-bundle": "~6.3.0",
         "symfony/validator": "~6.3.0",
-        "symfony/yaml": "~6.3.0",
-        "twig/twig": "^3.0"
+        "symfony/yaml": "~6.3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "enlightn/security-checker": "^1.10",
         "ergebnis/composer-normalize": "^2.33",
-        "friendsoftwig/twigcs": "^6.2",
         "phpro/grumphp": "^2.0",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10",
@@ -37,12 +32,9 @@
         "shipmonk/phpstan-rules": "^2.6",
         "slam/phpstan-extensions": "^6.0",
         "spaze/phpstan-disallowed-calls": "^2.15",
-        "symfony/browser-kit": "~6.3.0",
-        "symfony/css-selector": "~6.3.0",
         "symfony/maker-bundle": "^1.50",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "~6.3.0",
-        "symfony/web-profiler-bundle": "~6.3.0",
         "symplify/easy-coding-standard": "^11.5",
         "zenstruck/foundry": "^1.34"
     },
