--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,16 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.24",
         "symfony/console": "~6.3.0",
         "symfony/dotenv": "~6.3.0",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "~6.3.0",
+        "symfony/property-access": "~6.3.0",
+        "symfony/property-info": "~6.3.0",
         "symfony/runtime": "~6.3.0",
+        "symfony/serializer": "~6.3.0",
         "symfony/validator": "~6.3.0",
         "symfony/yaml": "~6.3.0"
     },
@@ -64,12 +69,12 @@
     },
     "config": {
         "allow-plugins": {
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true,
-            "phpro/grumphp": false,
             "ergebnis/composer-normalize": true,
-            "phpstan/extension-installer": true
+            "php-http/discovery": true,
+            "phpro/grumphp": false,
+            "phpstan/extension-installer": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
         },
         "sort-packages": true
     },
