--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,6 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+    prefix: /api
 
 app.swagger_ui:
     path: /api/doc
