--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "dcorroyer/my-open-api-bundle": "dev-main",
+        "dcorroyer/my-rest-bundle": "dev-main",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/asset": "~6.3.0",
+        "symfony/browser-kit": "~6.3.0",
         "symfony/console": "~6.3.0",
         "symfony/dotenv": "~6.3.0",
         "symfony/flex": "^2",
@@ -40,7 +41,7 @@
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^10.0",
         "shipmonk/phpstan-rules": "^2.6",
         "slam/phpstan-extensions": "^6.0",
         "spaze/phpstan-disallowed-calls": "^2.15",
