--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/property-access": "~6.3.0",
         "symfony/property-info": "~6.3.0",
         "symfony/runtime": "~6.3.0",
+        "symfony/security-bundle": "6.3.*",
         "symfony/serializer": "~6.3.0",
         "symfony/twig-bundle": "~6.3.0",
         "symfony/validator": "~6.3.0",
