feat: expenses endpoints finished

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,9 @@ security:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        register:
+            pattern: ^/api/register
+            stateless: true
         api:
             pattern: ^/api
             stateless: true
@@ -29,10 +32,6 @@ security:
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
-#         - { path: ^/admin, roles: ROLE_ADMIN }
-#         - { path: ^/api/login, roles: PUBLIC_ACCESS }
-#         - { path: ^/api/register, roles: PUBLIC_ACCESS }
-#         - { path: ^/api, roles: ROLE_USER }
 
 when@test:
     security:
