--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "knplabs/knp-paginator-bundle": "^6.2",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/api-doc-bundle": "^4.12",
+        "pentatrion/vite-bundle": "^6.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "~6.3.0",
         "symfony/browser-kit": "~6.3.0",
         "symfony/console": "~6.3.0",
