--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -14,9 +14,10 @@ api_login_check:
     path: /api/login_check
 
 app_default:
-    path: /
+    path: /{path?}
     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
     defaults:
         template: base.html.twig
     requirements:
         path: ".+"
+
