--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "knplabs/knp-paginator-bundle": "^6.2",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/api-doc-bundle": "^4.12",
+        "nette/php-generator": "^4.1",
         "pentatrion/vite-bundle": "^6.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
