--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,7 @@ parameters:
         - src
     excludePaths:
         - src/DataFixtures
+        - src/Command
     parallel:
         maximumNumberOfProcesses: 32
     disallowedFunctionCalls:
