--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/dotenv": "~6.3.0",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "~6.3.0",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "~6.3.0",
         "symfony/property-info": "~6.3.0",
         "symfony/runtime": "~6.3.0",
@@ -50,9 +51,11 @@
         "shipmonk/phpstan-rules": "^2.6",
         "slam/phpstan-extensions": "^6.0",
         "spaze/phpstan-disallowed-calls": "^2.15",
+        "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.50",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "~6.3.0",
+        "symfony/web-profiler-bundle": "6.3.*",
         "symplify/easy-coding-standard": "^11.5",
         "zenstruck/foundry": "^1.34"
     },
