--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.0",
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
         "vite": "^5.0",
         "vite-plugin-symfony": "^6.3"
     },
