--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "lint": "eslint assets/**/*.{js,jsx,ts,tsx,json}",
+        "lint:fix": "eslint --fix 'assets/**/*.{js,jsx,ts,tsx,json}'",
+        "format": "prettier --write 'assets/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
     },
     "devDependencies": {
         "@types/node": "^20.10.3",
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^7.0.1",
+        "@typescript-eslint/parser": "^7.0.1",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.17",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.33",
+        "prettier": "^3.2.5",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0",
         "vite-plugin-symfony": "^6.3"
