--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,21 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "~6.3.0",
-        "symfony/browser-kit": "~6.3.0",
-        "symfony/console": "~6.3.0",
-        "symfony/dotenv": "~6.3.0",
+        "symfony/asset": "^6.4",
+        "symfony/browser-kit": "^6.4",
+        "symfony/console": "^6.4",
+        "symfony/dotenv": "^6.4",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "~6.3.0",
+        "symfony/framework-bundle": "^6.4",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/property-access": "~6.3.0",
-        "symfony/property-info": "~6.3.0",
-        "symfony/runtime": "~6.3.0",
-        "symfony/security-bundle": "~6.3.0",
-        "symfony/serializer": "~6.3.0",
-        "symfony/twig-bundle": "~6.3.0",
-        "symfony/validator": "~6.3.0",
-        "symfony/yaml": "~6.3.0",
+        "symfony/property-access": "^6.4",
+        "symfony/property-info": "^6.4",
+        "symfony/runtime": "^6.4",
+        "symfony/security-bundle": "^6.4",
+        "symfony/serializer": "^6.4",
+        "symfony/twig-bundle": "^6.4",
+        "symfony/validator": "^6.4",
+        "symfony/yaml": "^6.4",
         "twig/extra-bundle": "^2.12 || ^3.0",
         "twig/twig": "^2.12 || ^3.0"
     },
@@ -51,11 +51,11 @@
         "shipmonk/phpstan-rules": "^2.6",
         "slam/phpstan-extensions": "^6.0",
         "spaze/phpstan-disallowed-calls": "^2.15",
-        "symfony/debug-bundle": "~6.3.0",
+        "symfony/debug-bundle": "^6.4",
         "symfony/maker-bundle": "^1.50",
-        "symfony/phpunit-bridge": "^6.3",
-        "symfony/stopwatch": "~6.3.0",
-        "symfony/web-profiler-bundle": "~6.3.0",
+        "symfony/phpunit-bridge": "^6.4",
+        "symfony/stopwatch": "^6.4",
+        "symfony/web-profiler-bundle": "^6.4",
         "symplify/easy-coding-standard": "^11.5",
         "zenstruck/foundry": "^1.34"
     },
@@ -97,7 +97,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.3.*"
+            "require": "6.4.*"
         }
     },
     "scripts": {
