--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=dev
 APP_SECRET=13e780aafbc6e5253c0ba9b768a5420c
-DATABASE_URL="mysql://root:secret@mysql:3306/mybudget"
+DATABASE_URL="mysql://root:root@my-budget-mariadb:3306/mybudget"
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
