The configuration files have been adjusted to fix issues with the profiler operating with HTTPS and to ensure compatibility of `castor ui:dev` with `docker npm`. The server configuration in `vite.config.ts` now includes a `watch` object, host, and port settings for the 'hmr'. Additionally, ports have been clearly specified in the `compose.yaml` file, and HTTPS flag has been set on in the `.env` file for profiler.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_ENV=dev
 APP_SECRET=13e780aafbc6e5253c0ba9b768a5420c
 DATABASE_URL="mysql://root:root@my-budget-mariadb:3306/mybudget"
+HTTPS=on
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
