--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,8 @@ services:
     container_name: my-budget-app
     depends_on:
       - mariadb
+    ports:
+      - "5173:5173"
     build:
       context: .
       dockerfile: Dockerfile
