--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 <!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
 <phpunit
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
         backupGlobals="false"
         colors="true"
         bootstrap="tests/bootstrap.php"
@@ -12,10 +12,11 @@
     <php>
         <ini name="display_errors" value="1"/>
         <ini name="error_reporting" value="-1"/>
+        <env name="APP_ENV" value="test" force="true"/>
         <server name="APP_ENV" value="test" force="true"/>
         <server name="SHELL_VERBOSITY" value="-1"/>
         <server name="SYMFONY_PHPUNIT_REMOVE" value=""/>
-        <server name="SYMFONY_PHPUNIT_VERSION" value="10.2"/>
+        <server name="SYMFONY_PHPUNIT_VERSION" value="10.5"/>
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled"/>
     </php>
     <testsuites>
@@ -43,10 +44,11 @@
             <directory>tests/Integration/Repository</directory>
         </testsuite>
     </testsuites>
-    <coverage includeUncoveredFiles="true"
-              pathCoverage="true"
-              ignoreDeprecatedCodeUnits="true"
-              disableCodeCoverageIgnore="false">
+    <coverage
+            includeUncoveredFiles="true"
+            pathCoverage="true"
+            ignoreDeprecatedCodeUnits="true"
+            disableCodeCoverageIgnore="false">
     </coverage>
     <source>
         <include>
