fix: archi + tests

--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,6 @@
 APP_ENV=dev
 APP_SECRET=13e780aafbc6e5253c0ba9b768a5420c
-DATABASE_URL="mysql://root:root@mybudget-mariadb:3306/mybudget"
+DATABASE_URL="mysql://root:root@mybudget-mariadb-1:3306/mybudget"
 HTTPS=on
 
 ###> lexik/jwt-authentication-bundle ###
