--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "ergebnis/phpunit-slow-test-detector": "^2.10",
         "knplabs/knp-paginator-bundle": "^6.2",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/api-doc-bundle": "^4.12",
