refacto: clean frontend

--- a/compose.yaml
+++ b/compose.yaml
@@ -31,7 +31,7 @@ services:
       MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
     volumes:
       - ./app:/app
-      - ./castor.php:/castor.php
+      - ./castor.php:/app/castor.php
       - ./.castor:/app/.castor
       - ./tools:/tools
       - ~/.ssh:/home/www-data/.ssh:ro
