--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -27,6 +27,7 @@ parameters:
     excludePaths:
     ignoreErrors:
         - '#^Class .*[Payload] has an uninitialized property.*$#'
+        - '#^Class .*\\Entity\\.* has an uninitialized property.*$#'
     symfony:
         containerXmlPath: %currentWorkingDirectory%/var/cache/dev/App_KernelDevDebugContainer.xml
     checkTooWideReturnTypesInProtectedAndPublicMethods: true
