--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -28,8 +28,8 @@ parameters:
     ignoreErrors:
         - '#^Class .*[Payload] has an uninitialized property.*$#'
         - '#^Class .*\\Entity\\.* has an uninitialized property.*$#'
-    symfony:
-        containerXmlPath: %currentWorkingDirectory%/var/cache/dev/App_KernelDevDebugContainer.xml
+#    symfony:
+#        containerXmlPath: %currentWorkingDirectory%/var/cache/dev/App_KernelDevDebugContainer.xml
     checkTooWideReturnTypesInProtectedAndPublicMethods: true
     checkUninitializedProperties: true
     checkDynamicProperties: true
