--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -12,11 +12,15 @@
         "slam/phpstan-extensions": "^6.3",
         "voku/phpstan-rules": "^3.2",
         "shipmonk/phpstan-rules": "^2.11",
-        "staabm/phpstan-todo-by": "^0.1.25"
+        "staabm/phpstan-todo-by": "^0.1.25",
+        "phpstan/phpstan-doctrine": "^1.3"
     },
     "config": {
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
+    },
+    "require": {
+        "ergebnis/phpstan-rules": "^2.2"
     }
 }
