feat: users crud + register + login

--- a/tools/phpstan/phpstan.neon
+++ b/tools/phpstan/phpstan.neon
@@ -38,6 +38,7 @@ parameters:
     reportMaybesInPropertyPhpDocTypes: true
     reportStaticMethodSignatures: true
     reportUnmatchedIgnoredErrors: false
+    treatPhpDocTypesAsCertain: false
 #    editorUrl: 'phpstorm://open?file=/home/t/franken-base/%%relFile%%&line=%%line%%'
     editorUrlTitle: '%%relFile%%:%%line%%'
 #    doctrine: # see: https://github.com/phpstan/phpstan-doctrine?tab=readme-ov-file#configuration
