feat: Budget crud

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -31,8 +31,8 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/api/docs, roles: PUBLIC_ACCESS }
-#        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api, roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+#        - { path: ^/api, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
