--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.2",
         "lexik/jwt-authentication-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.4",
+        "pentatrion/vite-bundle": "^6.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "rekalogika/api-lite": "^0.7.2",
