--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,2 +1,10 @@
 api_login_check:
   path: /api/login
+
+app_default:
+  path: /{path?}
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: base.html.twig
+  requirements:
+    path: "^(?!api/).*$"
