--- a/app/package.json
+++ b/app/package.json
@@ -1,53 +1,36 @@
 {
-    "type": "module",
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint assets/**/*.{js,jsx,ts,tsx,json}",
-        "lint:fix": "eslint --fix 'assets/**/*.{js,jsx,ts,tsx,json}'",
-        "format": "prettier --write 'assets/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
-    },
-    "devDependencies": {
-        "@types/node": "^20.10.3",
-        "@types/react": "^18.2.41",
-        "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^7.0.1",
-        "@typescript-eslint/parser": "^7.0.1",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.17",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "postcss": "^8.4.33",
-        "prettier": "^3.2.5",
-        "tailwindcss": "^3.4.1",
-        "vite": "^5.0",
-        "vite-plugin-symfony": "^6.3"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^3.3.4",
-        "@radix-ui/react-accordion": "^1.1.2",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-tabs": "^1.0.4",
-        "@radix-ui/react-toast": "^1.1.5",
-        "axios": "^1.6.7",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
-        "lucide-react": "^0.321.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.50.1",
-        "react-router-dom": "^6.22.0",
-        "tailwind-merge": "^2.2.1",
-        "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.22.4"
-    }
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint assets/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix 'assets/**/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write 'assets/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "postcss": "^8.4.39",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.3.2",
+    "vite": "^5.0",
+    "vite-plugin-symfony": "^6.4"
+  },
+  "dependencies": {
+    "@mantine/core": "^7.11.1",
+    "@mantine/hooks": "^7.11.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
