--- a/app/package.json
+++ b/app/package.json
@@ -20,16 +20,19 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.39",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.3.2",
+    "typescript": "^5.2.2",
     "vite": "^5.0",
     "vite-plugin-symfony": "^6.4"
   },
   "dependencies": {
     "@mantine/core": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
+    "@tabler/icons-react": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
