--- a/app/package.json
+++ b/app/package.json
@@ -30,10 +30,16 @@
     "vite-plugin-symfony": "^6.4"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.11.1",
+    "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
+    "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^3.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.24.1",
+    "zod": "^3.23.8"
   }
 }
