--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.11.1",
     "@mantine/form": "^7.11.1",
-    "@mantine/hooks": "^7.11.1",
+    "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^3.10.0",
     "@tanstack/react-query": "^5.51.11",
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1",
+    "use-local-storage": "^3.0.0",
     "zod": "^3.23.8"
   }
 }
