--- a/app/composer.json
+++ b/app/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "mybudget/app",
+    "description": "MyBudget API w Symfony 7.1 & API Platform 3.3",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
