feat: fix composer normalize for CI

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,10 +1,8 @@
 {
     "name": "mybudget/app",
     "description": "MyBudget API w Symfony 7.1 & API Platform 3.3",
-    "type": "project",
     "license": "proprietary",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
+    "type": "project",
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
@@ -21,48 +19,30 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "rekalogika/api-lite": "^0.7.2",
-        "symfony/asset": "7.1.*",
-        "symfony/console": "7.1.*",
-        "symfony/dotenv": "7.1.*",
-        "symfony/expression-language": "7.1.*",
+        "symfony/asset": "~7.1.0",
+        "symfony/console": "~7.1.0",
+        "symfony/dotenv": "~7.1.0",
+        "symfony/expression-language": "~7.1.0",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "7.1.*",
-        "symfony/property-access": "7.1.*",
-        "symfony/property-info": "7.1.*",
-        "symfony/runtime": "7.1.*",
-        "symfony/security-bundle": "7.1.*",
-        "symfony/serializer": "7.1.*",
-        "symfony/twig-bundle": "7.1.*",
-        "symfony/uid": "7.1.*",
-        "symfony/validator": "7.1.*",
-        "symfony/yaml": "7.1.*"
-    }
-    ,
+        "symfony/framework-bundle": "~7.1.0",
+        "symfony/property-access": "~7.1.0",
+        "symfony/property-info": "~7.1.0",
+        "symfony/runtime": "~7.1.0",
+        "symfony/security-bundle": "~7.1.0",
+        "symfony/serializer": "~7.1.0",
+        "symfony/twig-bundle": "~7.1.0",
+        "symfony/uid": "~7.1.0",
+        "symfony/validator": "~7.1.0",
+        "symfony/yaml": "~7.1.0"
+    },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "ergebnis/composer-normalize": "^2.43",
         "roave/security-advisories": "dev-latest",
         "symfony/maker-bundle": "^1.60",
-        "symfony/stopwatch": "7.1.*",
-        "symfony/web-profiler-bundle": "7.1.*",
+        "symfony/stopwatch": "~7.1.0",
+        "symfony/web-profiler-bundle": "~7.1.0",
         "zenstruck/foundry": "^2.0"
-    },
-    "config": {
-        "allow-plugins": {
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
@@ -74,25 +54,46 @@
         "symfony/polyfill-php81": "*",
         "symfony/polyfill-php82": "*"
     },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
     "conflict": {
         "symfony/symfony": "*"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "php-http/discovery": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "sort-packages": true
     },
     "extra": {
         "symfony": {
             "allow-contrib": false,
             "require": "7.1.*"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         }
     }
 }
