feat: fix rector for CI

--- a/tools/phpstan/phpstan.neon
+++ b/tools/phpstan/phpstan.neon
@@ -1,10 +1,10 @@
 includes:
-    - /tools/phpstan/vendor/spaze/phpstan-disallowed-calls/disallowed-dangerous-calls.neon
-    - /tools/phpstan/vendor/spaze/phpstan-disallowed-calls/disallowed-execution-calls.neon
-    - /tools/phpstan/vendor/spaze/phpstan-disallowed-calls/disallowed-insecure-calls.neon
-    - /tools/phpstan/vendor/spaze/phpstan-disallowed-calls/disallowed-loose-calls.neon
-    - /tools/phpstan/vendor/slam/phpstan-extensions/conf/not-now-rules.neon
-    - /tools/phpstan/vendor/slam/phpstan-extensions/conf/symfony-rules.neon
+    - %rootDir%/../../spaze/phpstan-disallowed-calls/disallowed-dangerous-calls.neon
+    - %rootDir%/../../spaze/phpstan-disallowed-calls/disallowed-execution-calls.neon
+    - %rootDir%/../../spaze/phpstan-disallowed-calls/disallowed-insecure-calls.neon
+    - %rootDir%/../../spaze/phpstan-disallowed-calls/disallowed-loose-calls.neon
+    - %rootDir%/../../slam/phpstan-extensions/conf/not-now-rules.neon
+    - %rootDir%/../../slam/phpstan-extensions/conf/symfony-rules.neon
     - phar://phpstan.phar/conf/bleedingEdge.neon
 
 parameters:
