--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,41 +58,41 @@ jobs:
 
       - name: ECS
         working-directory: app
-        run: $GITHUB_WORKSPACE/tools/ecs/vendor/bin/ecs check --config $GITHUB_WORKSPACE/app/ecs.php
+        run: $GITHUB_WORKSPACE/tools/ecs/vendor/bin/ecs check --config $GITHUB_WORKSPACE/tools/ecs/ecs.php
 
-      - name: Rector
-        working-directory: app
-        run: $GITHUB_WORKSPACE/tools/rector/vendor/bin/rector --dry-run --clear-cache --config=rector.php
+#      - name: Rector
+#        working-directory: app
+#        run: $GITHUB_WORKSPACE/tools/rector/vendor/bin/rector --dry-run --clear-cache --config=$GITHUB_WORKSPACE/tools/rector/rector.php
 
       - name: PHPStan
         working-directory: app
-        run: $GITHUB_WORKSPACE/tools/phpstan/vendor/bin/phpstan analyse --level=8 --configuration $GITHUB_WORKSPACE/app/phpstan.neon --memory-limit=1G
+        run: $GITHUB_WORKSPACE/tools/phpstan/vendor/bin/phpstan analyse --level=8 --configuration $GITHUB_WORKSPACE/tools/phpstan/phpstan.neon --memory-limit=1G
 
-      - name: Run Tests
-        env:
-          APP_ENV: test
-          DATABASE_URL: "mysql://root:root@127.0.0.1:3306/symfony?serverVersion=10.5.24-MariaDB"
-        working-directory: app
-        run: |
-          php bin/console doctrine:database:create --env=test
-          $GITHUB_WORKSPACE/app/vendor/bin/phpunit --coverage-cobertura=coverage.xml
-
-      - name: Code Coverage Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: ./app/coverage.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: '60 80'
-
-      - name: Add Coverage PR Comment
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: github.event_name == 'pull_request'
-        with:
-          recreate: true
-          path: code-coverage-results.md
+#      - name: Run Tests
+#        env:
+#          APP_ENV: test
+#          DATABASE_URL: "mysql://root:root@127.0.0.1:3306/symfony?serverVersion=10.5.24-MariaDB"
+#        working-directory: app
+#        run: |
+#          php bin/console doctrine:database:create --env=test
+#          $GITHUB_WORKSPACE/app/vendor/bin/phpunit --coverage-cobertura=coverage.xml
+#
+#      - name: Code Coverage Report
+#        uses: irongut/CodeCoverageSummary@v1.3.0
+#        with:
+#          filename: ./app/coverage.xml
+#          badge: true
+#          fail_below_min: true
+#          format: markdown
+#          hide_branch_rate: false
+#          hide_complexity: true
+#          indicators: true
+#          output: both
+#          thresholds: '60 80'
+#
+#      - name: Add Coverage PR Comment
+#        uses: marocchino/sticky-pull-request-comment@v2
+#        if: github.event_name == 'pull_request'
+#        with:
+#          recreate: true
+#          path: code-coverage-results.md
