--- a/tools/phpstan/phpstan.neon
+++ b/tools/phpstan/phpstan.neon
@@ -64,7 +64,10 @@ parameters:
         - "#^Method .*CollectionStateProvider::provide\\(\\) should return Rekalogika\\\\ApiLite\\\\Paginator\\\\MappingPaginatorDecorator<.*> but returns iterable<.*>.$#"
         -
             identifier: property.uninitialized
-            path: %currentWorkingDirectory%/src/ApiInput/*
+            path: %currentWorkingDirectory%/src/Dto/*
+        -
+            identifier: doctrine.associationType
+            path: %currentWorkingDirectory%/src/Entity/*
     ergebnis:
         final:
             enabled: false
