--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -3,6 +3,7 @@ controllers:
     path: ../src/Controller/
     namespace: App\Controller
   type: attribute
+  format: json
   prefix: /api
 
 api.swagger_ui:
