feat: formatted date + call to api with useMutation

--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.11.1",
+    "@mantine/dates": "^7.12.2",
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.1",
@@ -41,6 +42,7 @@
     "@tanstack/react-query-devtools": "^5.51.21",
     "@tanstack/react-router": "^1.46.8",
     "@tanstack/router": "^0.0.1-beta.53",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
