--- a/tools/phpstan/phpstan.neon
+++ b/tools/phpstan/phpstan.neon
@@ -10,6 +10,8 @@ includes:
 parameters:
     level: max
     errorFormat: ticketswap
+    excludePaths:
+        - %currentWorkingDirectory%/src/Shared/*
     paths:
         - %currentWorkingDirectory%/src
 #        - %currentWorkingDirectory%/tests
@@ -70,11 +72,14 @@ parameters:
             message: "#^Parameter .* \\$parameters .*Test\\:\\:url\\(\\) should be contravariant with parameter \\$parameters .* App\\\\Tests\\\\AbstractApiTestCase\\:\\:url\\(\\)$#"
             identifier: method.childParameterType
         -
+            path: %currentWorkingDirectory%/src/**/*Controller.php
+            identifier: magicConstant.outOfFunction
+        -
             identifier: property.uninitialized
-            path: %currentWorkingDirectory%/src/Dto/*
+            path: %currentWorkingDirectory%/src/**/Dto/*
         -
             identifier: doctrine.associationType
-            path: %currentWorkingDirectory%/src/Entity/*
+            path: %currentWorkingDirectory%/src/*/Entity/*
     type_perfect:
         no_mixed: true
         null_over_false: true
