remove my rest bundle

--- a/app/composer.json
+++ b/app/composer.json
@@ -7,12 +7,12 @@
         "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "dcorroyer/my-rest-bundle": "dev-dev",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "ergebnis/phpunit-slow-test-detector": "^2.15",
+        "knplabs/knp-paginator-bundle": "^6.6",
         "lexik/jwt-authentication-bundle": "^3.0",
         "loophp/collection": "^7.6",
         "nelmio/cors-bundle": "^2.4",
