--- a/app/composer.json
+++ b/app/composer.json
@@ -1,106 +1,106 @@
 {
-    "name": "mybudget/app",
-    "description": "MyBudget API w Symfony 7.1 & API Platform 3.3",
-    "license": "proprietary",
-    "type": "project",
-    "require": {
-        "php": ">=8.3",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.12",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.2",
-        "ergebnis/phpunit-slow-test-detector": "^2.15",
-        "knplabs/knp-paginator-bundle": "^6.6",
-        "lexik/jwt-authentication-bundle": "^3.0",
-        "loophp/collection": "^7.6",
-        "nelmio/api-doc-bundle": "^4.37",
-        "nelmio/cors-bundle": "^2.4",
-        "nesbot/carbon": "^3.7",
-        "pentatrion/vite-bundle": "^6.4",
-        "phpdocumentor/reflection-docblock": "^5.4",
-        "phpstan/phpdoc-parser": "^1.29",
-        "runtime/frankenphp-symfony": "^0.2.0",
-        "symfony/asset": "~7.1.0",
-        "symfony/console": "~7.1.0",
-        "symfony/dotenv": "~7.1.0",
-        "symfony/expression-language": "~7.1.0",
-        "symfony/flex": "^2",
-        "symfony/framework-bundle": "~7.1.0",
-        "symfony/property-access": "~7.1.0",
-        "symfony/property-info": "~7.1.0",
-        "symfony/runtime": "~7.1.0",
-        "symfony/security-bundle": "~7.1.0",
-        "symfony/serializer": "~7.1.0",
-        "symfony/twig-bundle": "~7.1.0",
-        "symfony/uid": "~7.1.0",
-        "symfony/validator": "~7.1.0",
-        "symfony/yaml": "~7.1.0"
-    },
-    "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.6",
-        "ergebnis/composer-normalize": "^2.43",
-        "phpunit/phpunit": "^10.0",
-        "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "~7.1.0",
-        "symfony/css-selector": "~7.1.0",
-        "symfony/maker-bundle": "^1.60",
-        "symfony/phpunit-bridge": "^7.1",
-        "symfony/stopwatch": "~7.1.0",
-        "symfony/web-profiler-bundle": "~7.1.0",
-        "zenstruck/foundry": "^2.0"
-    },
-    "replace": {
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php73": "*",
-        "symfony/polyfill-php74": "*",
-        "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php81": "*",
-        "symfony/polyfill-php82": "*"
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true,
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "config": {
-        "allow-plugins": {
-            "ergebnis/composer-normalize": true,
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
-        },
-        "sort-packages": true
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "7.1.*"
-        }
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ],
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
+  "name": "mybudget/app",
+  "description": "MyBudget API w Symfony 7.1",
+  "license": "proprietary",
+  "type": "project",
+  "require": {
+    "php": ">=8.3",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "doctrine/dbal": "^3",
+    "doctrine/doctrine-bundle": "^2.12",
+    "doctrine/doctrine-migrations-bundle": "^3.3",
+    "doctrine/orm": "^3.2",
+    "ergebnis/phpunit-slow-test-detector": "^2.15",
+    "knplabs/knp-paginator-bundle": "^6.6",
+    "lexik/jwt-authentication-bundle": "^3.0",
+    "loophp/collection": "^7.6",
+    "nelmio/api-doc-bundle": "^4.37",
+    "nelmio/cors-bundle": "^2.4",
+    "nesbot/carbon": "^3.7",
+    "pentatrion/vite-bundle": "^6.4",
+    "phpdocumentor/reflection-docblock": "^5.4",
+    "phpstan/phpdoc-parser": "^1.29",
+    "runtime/frankenphp-symfony": "^0.2.0",
+    "symfony/asset": "~7.1.0",
+    "symfony/console": "~7.1.0",
+    "symfony/dotenv": "~7.1.0",
+    "symfony/expression-language": "~7.1.0",
+    "symfony/flex": "^2",
+    "symfony/framework-bundle": "~7.1.0",
+    "symfony/property-access": "~7.1.0",
+    "symfony/property-info": "~7.1.0",
+    "symfony/runtime": "~7.1.0",
+    "symfony/security-bundle": "~7.1.0",
+    "symfony/serializer": "~7.1.0",
+    "symfony/twig-bundle": "~7.1.0",
+    "symfony/uid": "~7.1.0",
+    "symfony/validator": "~7.1.0",
+    "symfony/yaml": "~7.1.0"
+  },
+  "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.6",
+    "ergebnis/composer-normalize": "^2.43",
+    "phpunit/phpunit": "^10.0",
+    "roave/security-advisories": "dev-latest",
+    "symfony/browser-kit": "~7.1.0",
+    "symfony/css-selector": "~7.1.0",
+    "symfony/maker-bundle": "^1.60",
+    "symfony/phpunit-bridge": "^7.1",
+    "symfony/stopwatch": "~7.1.0",
+    "symfony/web-profiler-bundle": "~7.1.0",
+    "zenstruck/foundry": "^2.0"
+  },
+  "replace": {
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php72": "*",
+    "symfony/polyfill-php73": "*",
+    "symfony/polyfill-php74": "*",
+    "symfony/polyfill-php80": "*",
+    "symfony/polyfill-php81": "*",
+    "symfony/polyfill-php82": "*"
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true,
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true,
+      "php-http/discovery": true,
+      "symfony/flex": true,
+      "symfony/runtime": true
+    },
+    "sort-packages": true
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "7.1.*"
+    }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ],
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    }
+  }
 }
